# airo_trajectory

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/airo_trajectory/: airo_trajectory_server.h
launch/: example_mission_node.launch  file_trajectory.launch  position_setpoint.launch
results/: transmit.sh
scripts/: circle.py  lemniscate.py  points.py  polynomial.py  result_plot.py
src/: airo_trajectory_server.cpp  example_mission_node.cpp  file_trajectory_node.cpp  position_setpoint_node.cpp
traj/: circle.py  circle.txt  lemniscate.py  lemniscate.txt  points.py  points.txt  polynomial.py  polynomial.txt
